Fixed visibility of placeholder text

--- a/web/src/components/Login/Login.module.css
+++ b/web/src/components/Login/Login.module.css
@@ -8,6 +8,7 @@
     flex: 1;
     width: 50%;
     background-color: #ffffff;
+    color: black;
 }
 
 .rightHalf {
